--- a/index.html
+++ b/index.html
@@ -10,6 +10,41 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <section id="hero">
+    <header>
+      <divl class="container">
+        <div class="row">
+          <div class="logo">
+            <img src="img/logo.svg" alt="logo" width="156" height="53">
+          </div>
+          <nav class="site-nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Loction</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+            </ul>
+          </nav>
+          <a class="signUp-btn" href="#">
+            Sign Up
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <div class="hero-content">
+      <div class="hero-des">
+        <h2 class="hero-title">Get the inspiration of interior design here</h2>
+        <p class="hero-text">architecture not only about engineering, it even 
+          lands to art and aesthetics. With us, you will get 
+          a residentical design with an extraordinary touch 
+          of art.</p>
+        <a class="hero-link" href="#">Let’s go</a>
+      </div>
+      <div class="hero-img">
+        <img src="img/hero-img.png" alt="hero-img" width="833" height="782">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
